Fixed "disabledAbilites" config breaking powers